# ChangeLog for media-sound/sfxr
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*sfxr-1.2.1 (24 Aug 2012)

  24 Aug 2012; Gavin Pryke (gavlee) <gavinlee303@googlemail.com>
  +sfxr-1.2.1.ebuild, +files/sfxr-1.2.1-Makefile.patch, +metadata.xml:
  import from my overlay
