@@ -1,5 +1,5 @@
 AUX sfxr-1.2.1-Makefile.patch 417 SHA256 626a8c907727221123337110f37539c780bb7f22fbb2cdb67b1bdaec1de9b140 SHA512 d871b1bb9cc4c751225631cef6ab29ab2c0c0606bbed54481ed2130243588d9fd519286608cf73b9b10223df89a31831080d2b851cbdd2bbd969be8459342cd3 WHIRLPOOL b17eb6bcbc4955a2451c774830fb5215280de92c52378f6fcaf08236ff93a16addd5efa994171be78a0671e05aaa4f49298d378a3c215e84b07241471d883a1b
 DIST sfxr-sdl-1.2.1.tar.gz 19444 SHA256 ca93be8964c92fe3a2c945640cd3e93c95ae7abe24290818f4fe7f6e5a7cd835 SHA512 a918f5212d77e10769d44808e0fa34c3df1da6880663c6a7d966860d145c0c2979b6a6772d12a35ca44b4d7337a38698c722569446eca95c2041ae86ec691adc WHIRLPOOL a2bf928b8777a2fec5eed4255efd7aa35621acb823ed6711fc37f63be35a41bc8a4ffab511a439ab47fca2183deb79fd4d273ed473eb68c189b2f8179001c184
-EBUILD sfxr-1.2.1.ebuild 582 SHA256 595ffa8fd648ad31792768bd45ea89fdc498c30c7d14dde87409737a1ce6849c SHA512 1dbdc0d42253bb37b256af6e3b3b34d350f379f314b89494992d507e5e0676bbe232875965aa02345517a81f471ddc27434ff55662d4e45488b69d4a156e8d85 WHIRLPOOL ff93599b4def2c8fce98936e20a6fd9d2a81c561230191a2e0f668bdfb3c3ab79f8cb5b03c9fb478961edfc1c24f13b0d74fe491e267e45d5029281afa8e5848
-MISC ChangeLog 306 SHA256 2c766f9198e099794d7cb3db5213dc50d373be1f660088c2e317161075932960 SHA512 1fbc24dd0f03ccc0673cb1e0a02f9ccdd0500409b2efdbb1e66199da14e46df0e5b7d268106452e2375f3b8b65ef6f3429e830327990f7619cf29783358cc108 WHIRLPOOL a309865733d2c530df6d38fc193c4dd82855aa2321f9c5fea69a5a1c4e298b684c3656f110cb863ef6c18b807c32fdd84565ef73618b415ffad378b9f0fc4076
+EBUILD sfxr-1.2.1.ebuild 690 SHA256 2f34897d10ea8f4f0936f0b3fbe6c3ba89367bfe2842677188e5de9880717511 SHA512 c81dcdbf8fa8490b712d4ee2cb3677b4657278481c99e794eb9cc0a4886701feca391473b430eeab48bddf0839d63d8db98215ed7a1e87390771349f357d18ed WHIRLPOOL 88cb2e6c107b102923e5f203cc35a0fa1d9bbd604ba4bd7f78395dc1b074cd4a6ad254d8e09af5dad2dddc99e101c5e633ae36922bb242f5ab39441774fdaa97
+MISC ChangeLog 497 SHA256 c9be8284fd0872c75430c76a555cd0b50ec5ce79b0ae5ffdb0961e4b45f0b39b SHA512 a3c909270f7c33b178f3da550a432c68783ea7ea218bcd09d9197da9cd60a4097d24f70a627372c237950950a9115b35fa0bbe07efe7a876c053ce6c6fd2372e WHIRLPOOL 50a7e012ff655e437339b7bb0181912f39421a2c0d2d47e28d9adaf1e2f4ec837387cac88f851645156bea85bf8e083cd5a9bec53ebd7db4fa12a1ef1b2768a3
 MISC metadata.xml 246 SHA256 f32f31abe9dcc1f9a5dc9b6a36996d773abd006d92c13c4df48f8d7d1061060f SHA512 327022589c637a14219eb603a62050fbb93b980f4693960c0ac4117b6b483d9f0d9fe1366d8e18227b34373a399aef339f49c16df8ca57b9ec870568a4d394f4 WHIRLPOOL e55381a9a9fd1d0efbe87da1c3aa302efdcf4734827f56273faeb55b17361c529518fcf16ac0946102e26165e8eedba81ab0cd07c7b08ce6bad001e944e43a0f
