@@ -1,6 +1,11 @@
 # ChangeLog for media-sound/sfxr
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  21 May 2014; Gavin Pryke (gavlee) <gavinlee303@googlemail.com>
+  sfxr-1.2.1.ebuild:
+  rename libsdl use dep from sound to audio, add dep on gtk3 and
+  virtual/pkgconfig. drop base eclass.
 
 *sfxr-1.2.1 (24 Aug 2012)
 
